site/api/4.08/Float.md
<!-- ((! set title API !)) ((! set documentation !)) ((! set api !)) ((! set nobreadcrumb !)) -->
<div class="api"><header><nav class="toc brand"><a class="brand" href="https://ocaml.org/"><img src="colour-logo-gray.svg" class="svg" alt="OCaml"></a></nav><nav class="toc"><div class="toc_version"><a href="/docs" id="version-select">API Version 4.08</a></div><a href="index.html">&lt; General Index</a><div class="api_search"><input type="text" name="apisearch" id="api_search" oninput="mySearch(false);" onkeypress="this.oninput();" onclick="this.oninput();" onpaste="this.oninput();">
<img src="search_icon.svg" alt="Search" class="svg" onclick="mySearch(false)"></div>
<div id="search_results"></div><div class="toc_title"><a href="#top">Float</a></div><ul><li><a href="#1_Floatingpointarithmetic">Floating-point arithmetic</a></li></ul></nav></header>

<h1>Module <a href="type_Float.html">Float</a></h1>

<pre><span id="MODULEFloat"><span class="keyword">module</span> Float</span>: <code class="code"><span class="keyword">sig</span></code> <a href="Float.html">..</a> <code class="code"><span class="keyword">end</span></code></pre><div class="info module top">
<div class="info-desc">
<h2 id="1_Floatingpointarithmetic">Floating-point arithmetic</h2>
<p>OCaml's floating-point numbers follow the
    IEEE 754 standard, using double precision (64 bits) numbers.
    Floating-point operations never raise an exception on overflow,
    underflow, division by zero, etc.  Instead, special IEEE numbers
    are returned as appropriate, such as <code class="code">infinity</code> for <code class="code">1.0&nbsp;/.&nbsp;0.0</code>,
    <code class="code">neg_infinity</code> for <code class="code">-1.0&nbsp;/.&nbsp;0.0</code>, and <code class="code">nan</code> ('not a number')
    for <code class="code">0.0&nbsp;/.&nbsp;0.0</code>.  These special numbers then propagate through
    floating-point computations as expected: for instance,
    <code class="code">1.0&nbsp;/.&nbsp;infinity</code> is <code class="code">0.0</code>, and any arithmetic operation with <code class="code">nan</code>
    as argument returns <code class="code">nan</code> as result.</p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.07.0</li>
</ul>
</div>
<hr width="100%">

<pre><span id="VALzero"><span class="keyword">val</span> zero</span> : <code class="type">float</code></pre><div class="info ">
<div class="info-desc">
<p>The floating point 0.</p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALone"><span class="keyword">val</span> one</span> : <code class="type">float</code></pre><div class="info ">
<div class="info-desc">
<p>The floating-point 1.</p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALminus_one"><span class="keyword">val</span> minus_one</span> : <code class="type">float</code></pre><div class="info ">
<div class="info-desc">
<p>The floating-point -1.</p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALneg"><span class="keyword">val</span> neg</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Unary negation.</p>
</div>
</div>

<pre><span id="VALadd"><span class="keyword">val</span> add</span> : <code class="type">float -&gt; float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Floating-point addition.</p>
</div>
</div>

<pre><span id="VALsub"><span class="keyword">val</span> sub</span> : <code class="type">float -&gt; float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Floating-point subtraction.</p>
</div>
</div>

<pre><span id="VALmul"><span class="keyword">val</span> mul</span> : <code class="type">float -&gt; float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Floating-point multiplication.</p>
</div>
</div>

<pre><span id="VALdiv"><span class="keyword">val</span> div</span> : <code class="type">float -&gt; float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Floating-point division.</p>
</div>
</div>

<pre><span id="VALfma"><span class="keyword">val</span> fma</span> : <code class="type">float -&gt; float -&gt; float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">fma&nbsp;x&nbsp;y&nbsp;z</code> returns <code class="code">x&nbsp;*&nbsp;y&nbsp;+&nbsp;z</code>, with a best effort for computing
   this expression with a single rounding, using either hardware
   instructions (providing full IEEE compliance) or a software
   emulation.  Note: since software emulation of the fma is costly,
   make sure that you are using hardware fma support if performance
   matters.</p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALrem"><span class="keyword">val</span> rem</span> : <code class="type">float -&gt; float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">rem&nbsp;a&nbsp;b</code> returns the remainder of <code class="code">a</code> with respect to <code class="code">b</code>.  The returned
    value is <code class="code">a&nbsp;-.&nbsp;n&nbsp;*.&nbsp;b</code>, where <code class="code">n</code> is the quotient <code class="code">a&nbsp;/.&nbsp;b</code> rounded towards
    zero to an integer.</p>
</div>
</div>

<pre><span id="VALsucc"><span class="keyword">val</span> succ</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">succ&nbsp;x</code> returns the floating point number right after <code class="code">x</code> i.e.,
   the smallest floating-point number greater than <code class="code">x</code>.  See also
   <a href="Float.html#VALnext_after"><code class="code"><span class="constructor">Float</span>.next_after</code></a>.</p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALpred"><span class="keyword">val</span> pred</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">pred&nbsp;x</code> returns the floating-point number right before <code class="code">x</code> i.e.,
   the greatest floating-point number smaller than <code class="code">x</code>.  See also
   <a href="Float.html#VALnext_after"><code class="code"><span class="constructor">Float</span>.next_after</code></a>.</p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALabs"><span class="keyword">val</span> abs</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">abs&nbsp;f</code> returns the absolute value of <code class="code">f</code>.</p>
</div>
</div>

<pre><span id="VALinfinity"><span class="keyword">val</span> infinity</span> : <code class="type">float</code></pre><div class="info ">
<div class="info-desc">
<p>Positive infinity.</p>
</div>
</div>

<pre><span id="VALneg_infinity"><span class="keyword">val</span> neg_infinity</span> : <code class="type">float</code></pre><div class="info ">
<div class="info-desc">
<p>Negative infinity.</p>
</div>
</div>

<pre><span id="VALnan"><span class="keyword">val</span> nan</span> : <code class="type">float</code></pre><div class="info ">
<div class="info-desc">
<p>A special floating-point value denoting the result of an
    undefined operation such as <code class="code">0.0&nbsp;/.&nbsp;0.0</code>.  Stands for
    'not a number'.  Any floating-point operation with <code class="code">nan</code> as
    argument returns <code class="code">nan</code> as result.  As for floating-point comparisons,
    <code class="code">=</code>, <code class="code">&lt;</code>, <code class="code">&lt;=</code>, <code class="code">&gt;</code> and <code class="code">&gt;=</code> return <code class="code"><span class="keyword">false</span></code> and <code class="code">&lt;&gt;</code> returns <code class="code"><span class="keyword">true</span></code>
    if one or both of their arguments is <code class="code">nan</code>.</p>
</div>
</div>

<pre><span id="VALpi"><span class="keyword">val</span> pi</span> : <code class="type">float</code></pre><div class="info ">
<div class="info-desc">
<p>The constant pi.</p>
</div>
</div>

<pre><span id="VALmax_float"><span class="keyword">val</span> max_float</span> : <code class="type">float</code></pre><div class="info ">
<div class="info-desc">
<p>The largest positive finite value of type <code class="code">float</code>.</p>
</div>
</div>

<pre><span id="VALmin_float"><span class="keyword">val</span> min_float</span> : <code class="type">float</code></pre><div class="info ">
<div class="info-desc">
<p>The smallest positive, non-zero, non-denormalized value of type <code class="code">float</code>.</p>
</div>
</div>

<pre><span id="VALepsilon"><span class="keyword">val</span> epsilon</span> : <code class="type">float</code></pre><div class="info ">
<div class="info-desc">
<p>The difference between <code class="code">1.0</code> and the smallest exactly representable
    floating-point number greater than <code class="code">1.0</code>.</p>
</div>
</div>

<pre><span id="VALis_finite"><span class="keyword">val</span> is_finite</span> : <code class="type">float -&gt; bool</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">is_finite&nbsp;x</code> is <code class="code"><span class="keyword">true</span></code> iff <code class="code">x</code> is finite i.e., not infinite and
   not <a href="Float.html#VALnan"><code class="code"><span class="constructor">Float</span>.nan</code></a>.</p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALis_infinite"><span class="keyword">val</span> is_infinite</span> : <code class="type">float -&gt; bool</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">is_infinite&nbsp;x</code> is <code class="code"><span class="keyword">true</span></code> iff <code class="code">x</code> is <a href="Float.html#VALinfinity"><code class="code"><span class="constructor">Float</span>.infinity</code></a> or <a href="Float.html#VALneg_infinity"><code class="code"><span class="constructor">Float</span>.neg_infinity</code></a>.</p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALis_nan"><span class="keyword">val</span> is_nan</span> : <code class="type">float -&gt; bool</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">is_nan&nbsp;x</code> is <code class="code"><span class="keyword">true</span></code> iff <code class="code">x</code> is not a number (see <a href="Float.html#VALnan"><code class="code"><span class="constructor">Float</span>.nan</code></a>).</p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALis_integer"><span class="keyword">val</span> is_integer</span> : <code class="type">float -&gt; bool</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">is_integer&nbsp;x</code> is <code class="code"><span class="keyword">true</span></code> iff <code class="code">x</code> is an integer.</p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALof_int"><span class="keyword">val</span> of_int</span> : <code class="type">int -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Convert an integer to floating-point.</p>
</div>
</div>

<pre><span id="VALto_int"><span class="keyword">val</span> to_int</span> : <code class="type">float -&gt; int</code></pre><div class="info ">
<div class="info-desc">
<p>Truncate the given floating-point number to an integer.
    The result is unspecified if the argument is <code class="code">nan</code> or falls outside the
    range of representable integers.</p>
</div>
</div>

<pre><span id="VALof_string"><span class="keyword">val</span> of_string</span> : <code class="type">string -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Convert the given string to a float.  The string is read in decimal
    (by default) or in hexadecimal (marked by <code class="code">0x</code> or <code class="code">0<span class="constructor">X</span></code>).
    The format of decimal floating-point numbers is
    <code class="code">&nbsp;[-]&nbsp;dd.ddd&nbsp;(e<span class="keywordsign">|</span><span class="constructor">E</span>)&nbsp;[+|-]&nbsp;dd&nbsp;</code>, where <code class="code">d</code> stands for a decimal digit.
    The format of hexadecimal floating-point numbers is
    <code class="code">&nbsp;[-]&nbsp;0(x<span class="keywordsign">|</span><span class="constructor">X</span>)&nbsp;hh.hhh&nbsp;(p<span class="keywordsign">|</span><span class="constructor">P</span>)&nbsp;[+|-]&nbsp;dd&nbsp;</code>, where <code class="code">h</code> stands for an
    hexadecimal digit and <code class="code">d</code> for a decimal digit.
    In both cases, at least one of the integer and fractional parts must be
    given; the exponent part is optional.
    The <code class="code">_</code> (underscore) character can appear anywhere in the string
    and is ignored.
    Depending on the execution platforms, other representations of
    floating-point numbers can be accepted, but should not be relied upon.
    Raise <code class="code"><span class="constructor">Failure</span>&nbsp;<span class="string">"float_of_string"</span></code> if the given string is not a valid
    representation of a float.</p>
</div>
</div>

<pre><span id="VALof_string_opt"><span class="keyword">val</span> of_string_opt</span> : <code class="type">string -&gt; float option</code></pre><div class="info ">
<div class="info-desc">
<p>Same as <code class="code">of_string</code>, but returns <code class="code"><span class="constructor">None</span></code> instead of raising.</p>
</div>
</div>

<pre><span id="VALto_string"><span class="keyword">val</span> to_string</span> : <code class="type">float -&gt; string</code></pre><div class="info ">
<div class="info-desc">
<p>Return the string representation of a floating-point number.</p>
</div>
</div>

<pre><span id="TYPEfpclass"><span class="keyword">type</span> <code class="type"></code>fpclass</span> = <code class="type"><a href="Stdlib.html#TYPEfpclass">fpclass</a></code> = </pre><table class="typetable">
<tbody><tr>
<td align="left" valign="top">
<code><span class="keyword">|</span></code></td>
<td align="left" valign="top">
<code><span id="TYPEELTfpclass.FP_normal"><span class="constructor">FP_normal</span></span></code></td>
<td class="typefieldcomment" align="left" valign="top"><code>(*</code></td><td class="typefieldcomment" align="left" valign="top"><div class="info ">
<div class="info-desc">
<p>Normal number, none of the below</p>
</div>
</div>
</td><td class="typefieldcomment" align="left" valign="bottom"><code>*)</code></td>
</tr>
<tr>
<td align="left" valign="top">
<code><span class="keyword">|</span></code></td>
<td align="left" valign="top">
<code><span id="TYPEELTfpclass.FP_subnormal"><span class="constructor">FP_subnormal</span></span></code></td>
<td class="typefieldcomment" align="left" valign="top"><code>(*</code></td><td class="typefieldcomment" align="left" valign="top"><div class="info ">
<div class="info-desc">
<p>Number very close to 0.0, has reduced precision</p>
</div>
</div>
</td><td class="typefieldcomment" align="left" valign="bottom"><code>*)</code></td>
</tr>
<tr>
<td align="left" valign="top">
<code><span class="keyword">|</span></code></td>
<td align="left" valign="top">
<code><span id="TYPEELTfpclass.FP_zero"><span class="constructor">FP_zero</span></span></code></td>
<td class="typefieldcomment" align="left" valign="top"><code>(*</code></td><td class="typefieldcomment" align="left" valign="top"><div class="info ">
<div class="info-desc">
<p>Number is 0.0 or -0.0</p>
</div>
</div>
</td><td class="typefieldcomment" align="left" valign="bottom"><code>*)</code></td>
</tr>
<tr>
<td align="left" valign="top">
<code><span class="keyword">|</span></code></td>
<td align="left" valign="top">
<code><span id="TYPEELTfpclass.FP_infinite"><span class="constructor">FP_infinite</span></span></code></td>
<td class="typefieldcomment" align="left" valign="top"><code>(*</code></td><td class="typefieldcomment" align="left" valign="top"><div class="info ">
<div class="info-desc">
<p>Number is positive or negative infinity</p>
</div>
</div>
</td><td class="typefieldcomment" align="left" valign="bottom"><code>*)</code></td>
</tr>
<tr>
<td align="left" valign="top">
<code><span class="keyword">|</span></code></td>
<td align="left" valign="top">
<code><span id="TYPEELTfpclass.FP_nan"><span class="constructor">FP_nan</span></span></code></td>
<td class="typefieldcomment" align="left" valign="top"><code>(*</code></td><td class="typefieldcomment" align="left" valign="top"><div class="info ">
<div class="info-desc">
<p>Not a number: result of an undefined operation</p>
</div>
</div>
</td><td class="typefieldcomment" align="left" valign="bottom"><code>*)</code></td>
</tr></tbody></table>

<div class="info ">
<div class="info-desc">
<p>The five classes of floating-point numbers, as determined by
    the <a href="Float.html#VALclassify_float"><code class="code"><span class="constructor">Float</span>.classify_float</code></a> function.</p>
</div>
</div>


<pre><span id="VALclassify_float"><span class="keyword">val</span> classify_float</span> : <code class="type">float -&gt; <a href="Float.html#TYPEfpclass">fpclass</a></code></pre><div class="info ">
<div class="info-desc">
<p>Return the class of the given floating-point number:
    normal, subnormal, zero, infinite, or not a number.</p>
</div>
</div>

<pre><span id="VALpow"><span class="keyword">val</span> pow</span> : <code class="type">float -&gt; float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Exponentiation.</p>
</div>
</div>

<pre><span id="VALsqrt"><span class="keyword">val</span> sqrt</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Square root.</p>
</div>
</div>

<pre><span id="VALexp"><span class="keyword">val</span> exp</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Exponential.</p>
</div>
</div>

<pre><span id="VALlog"><span class="keyword">val</span> log</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Natural logarithm.</p>
</div>
</div>

<pre><span id="VALlog10"><span class="keyword">val</span> log10</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Base 10 logarithm.</p>
</div>
</div>

<pre><span id="VALexpm1"><span class="keyword">val</span> expm1</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">expm1&nbsp;x</code> computes <code class="code">exp&nbsp;x&nbsp;-.&nbsp;1.0</code>, giving numerically-accurate results
    even if <code class="code">x</code> is close to <code class="code">0.0</code>.</p>
</div>
</div>

<pre><span id="VALlog1p"><span class="keyword">val</span> log1p</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">log1p&nbsp;x</code> computes <code class="code">log(1.0&nbsp;+.&nbsp;x)</code> (natural logarithm),
    giving numerically-accurate results even if <code class="code">x</code> is close to <code class="code">0.0</code>.</p>
</div>
</div>

<pre><span id="VALcos"><span class="keyword">val</span> cos</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Cosine.  Argument is in radians.</p>
</div>
</div>

<pre><span id="VALsin"><span class="keyword">val</span> sin</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Sine.  Argument is in radians.</p>
</div>
</div>

<pre><span id="VALtan"><span class="keyword">val</span> tan</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Tangent.  Argument is in radians.</p>
</div>
</div>

<pre><span id="VALacos"><span class="keyword">val</span> acos</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Arc cosine.  The argument must fall within the range <code class="code">[-1.0,&nbsp;1.0]</code>.
    Result is in radians and is between <code class="code">0.0</code> and <code class="code">pi</code>.</p>
</div>
</div>

<pre><span id="VALasin"><span class="keyword">val</span> asin</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Arc sine.  The argument must fall within the range <code class="code">[-1.0,&nbsp;1.0]</code>.
    Result is in radians and is between <code class="code">-pi/2</code> and <code class="code">pi/2</code>.</p>
</div>
</div>

<pre><span id="VALatan"><span class="keyword">val</span> atan</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Arc tangent.
    Result is in radians and is between <code class="code">-pi/2</code> and <code class="code">pi/2</code>.</p>
</div>
</div>

<pre><span id="VALatan2"><span class="keyword">val</span> atan2</span> : <code class="type">float -&gt; float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">atan2&nbsp;y&nbsp;x</code> returns the arc tangent of <code class="code">y&nbsp;/.&nbsp;x</code>.  The signs of <code class="code">x</code>
    and <code class="code">y</code> are used to determine the quadrant of the result.
    Result is in radians and is between <code class="code">-pi</code> and <code class="code">pi</code>.</p>
</div>
</div>

<pre><span id="VALhypot"><span class="keyword">val</span> hypot</span> : <code class="type">float -&gt; float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">hypot&nbsp;x&nbsp;y</code> returns <code class="code">sqrt(x&nbsp;*.&nbsp;x&nbsp;+&nbsp;y&nbsp;*.&nbsp;y)</code>, that is, the length
    of the hypotenuse of a right-angled triangle with sides of length
    <code class="code">x</code> and <code class="code">y</code>, or, equivalently, the distance of the point <code class="code">(x,y)</code>
    to origin.  If one of <code class="code">x</code> or <code class="code">y</code> is infinite, returns <code class="code">infinity</code>
    even if the other is <code class="code">nan</code>.</p>
</div>
</div>

<pre><span id="VALcosh"><span class="keyword">val</span> cosh</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Hyperbolic cosine.  Argument is in radians.</p>
</div>
</div>

<pre><span id="VALsinh"><span class="keyword">val</span> sinh</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Hyperbolic sine.  Argument is in radians.</p>
</div>
</div>

<pre><span id="VALtanh"><span class="keyword">val</span> tanh</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Hyperbolic tangent.  Argument is in radians.</p>
</div>
</div>

<pre><span id="VALtrunc"><span class="keyword">val</span> trunc</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">trunc&nbsp;x</code> rounds <code class="code">x</code> to the nearest integer whose absolute value is
   less than or equal to <code class="code">x</code>.</p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALround"><span class="keyword">val</span> round</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">round&nbsp;x</code> rounds <code class="code">x</code> to the nearest integer with ties (fractional
   values of 0.5) rounded away from zero, regardless of the current
   rounding direction.  If <code class="code">x</code> is an integer, <code class="code">+0.</code>, <code class="code">-0.</code>, <code class="code">nan</code>, or
   infinite, <code class="code">x</code> itself is returned.</p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALceil"><span class="keyword">val</span> ceil</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Round above to an integer value.
    <code class="code">ceil&nbsp;f</code> returns the least integer value greater than or equal to <code class="code">f</code>.
    The result is returned as a float.</p>
</div>
</div>

<pre><span id="VALfloor"><span class="keyword">val</span> floor</span> : <code class="type">float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p>Round below to an integer value.
    <code class="code">floor&nbsp;f</code> returns the greatest integer value less than or
    equal to <code class="code">f</code>.
    The result is returned as a float.</p>
</div>
</div>

<pre><span id="VALnext_after"><span class="keyword">val</span> next_after</span> : <code class="type">float -&gt; float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">next_after&nbsp;x&nbsp;y</code> returns the next representable floating-point
   value following <code class="code">x</code> in the direction of <code class="code">y</code>.  More precisely, if
   <code class="code">y</code> is greater (resp. less) than <code class="code">x</code>, it returns the smallest
   (resp. largest) representable number greater (resp. less) than <code class="code">x</code>.
   If <code class="code">x</code> equals <code class="code">y</code>, the function returns <code class="code">y</code>.  If <code class="code">x</code> or <code class="code">y</code> is
   <code class="code">nan</code>, a <code class="code">nan</code> is returned.
   Note that <code class="code">next_after&nbsp;max_float&nbsp;infinity&nbsp;=&nbsp;infinity</code> and that
   <code class="code">next_after&nbsp;0.&nbsp;infinity</code> is the smallest denormalized positive number.
   If <code class="code">x</code> is the smallest denormalized positive number,
   <code class="code">next_after&nbsp;x&nbsp;0.&nbsp;=&nbsp;0.</code></p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALcopy_sign"><span class="keyword">val</span> copy_sign</span> : <code class="type">float -&gt; float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">copy_sign&nbsp;x&nbsp;y</code> returns a float whose absolute value is that of <code class="code">x</code>
    and whose sign is that of <code class="code">y</code>.  If <code class="code">x</code> is <code class="code">nan</code>, returns <code class="code">nan</code>.
    If <code class="code">y</code> is <code class="code">nan</code>, returns either <code class="code">x</code> or <code class="code">-.&nbsp;x</code>, but it is not
    specified which.</p>
</div>
</div>

<pre><span id="VALsign_bit"><span class="keyword">val</span> sign_bit</span> : <code class="type">float -&gt; bool</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">sign_bit&nbsp;x</code> is <code class="code"><span class="keyword">true</span></code> iff the sign bit of <code class="code">x</code> is set.
    For example <code class="code">sign_bit&nbsp;1.</code> and <code class="code">signbit&nbsp;0.</code> are <code class="code"><span class="keyword">false</span></code> while
    <code class="code">sign_bit&nbsp;(-1.)</code> and <code class="code">sign_bit&nbsp;(-0.)</code> are <code class="code"><span class="keyword">true</span></code>.</p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALfrexp"><span class="keyword">val</span> frexp</span> : <code class="type">float -&gt; float * int</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">frexp&nbsp;f</code> returns the pair of the significant
    and the exponent of <code class="code">f</code>.  When <code class="code">f</code> is zero, the
    significant <code class="code">x</code> and the exponent <code class="code">n</code> of <code class="code">f</code> are equal to
    zero.  When <code class="code">f</code> is non-zero, they are defined by
    <code class="code">f&nbsp;=&nbsp;x&nbsp;*.&nbsp;2&nbsp;**&nbsp;n</code> and <code class="code">0.5&nbsp;&lt;=&nbsp;x&nbsp;&lt;&nbsp;1.0</code>.</p>
</div>
</div>

<pre><span id="VALldexp"><span class="keyword">val</span> ldexp</span> : <code class="type">float -&gt; int -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">ldexp&nbsp;x&nbsp;n</code> returns <code class="code">x&nbsp;*.&nbsp;2&nbsp;**&nbsp;n</code>.</p>
</div>
</div>

<pre><span id="VALmodf"><span class="keyword">val</span> modf</span> : <code class="type">float -&gt; float * float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">modf&nbsp;f</code> returns the pair of the fractional and integral
    part of <code class="code">f</code>.</p>
</div>
</div>

<pre><span id="TYPEt"><span class="keyword">type</span> <code class="type"></code>t</span> = <code class="type">float</code> </pre>
<div class="info ">
<div class="info-desc">
<p>An alias for the type of floating-point numbers.</p>
</div>
</div>


<pre><span id="VALcompare"><span class="keyword">val</span> compare</span> : <code class="type"><a href="Float.html#TYPEt">t</a> -&gt; <a href="Float.html#TYPEt">t</a> -&gt; int</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">compare&nbsp;x&nbsp;y</code> returns <code class="code">0</code> if <code class="code">x</code> is equal to <code class="code">y</code>, a negative integer if <code class="code">x</code>
    is less than <code class="code">y</code>, and a positive integer if <code class="code">x</code> is greater than
    <code class="code">y</code>. <code class="code">compare</code> treats <code class="code">nan</code> as equal to itself and less than any other float
    value.  This treatment of <code class="code">nan</code> ensures that <code class="code">compare</code> defines a total
    ordering relation.</p>
</div>
</div>

<pre><span id="VALequal"><span class="keyword">val</span> equal</span> : <code class="type"><a href="Float.html#TYPEt">t</a> -&gt; <a href="Float.html#TYPEt">t</a> -&gt; bool</code></pre><div class="info ">
<div class="info-desc">
<p>The equal function for floating-point numbers, compared using <a href="Float.html#VALcompare"><code class="code"><span class="constructor">Float</span>.compare</code></a>.</p>
</div>
</div>

<pre><span id="VALmin"><span class="keyword">val</span> min</span> : <code class="type"><a href="Float.html#TYPEt">t</a> -&gt; <a href="Float.html#TYPEt">t</a> -&gt; <a href="Float.html#TYPEt">t</a></code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">min&nbsp;x&nbsp;y</code> returns the minimum of <code class="code">x</code> and <code class="code">y</code>.  It returns <code class="code">nan</code>
   when <code class="code">x</code> or <code class="code">y</code> is <code class="code">nan</code>.  Moreover <code class="code">min&nbsp;(-0.)&nbsp;(+0.)&nbsp;=&nbsp;-0.</code></p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALmax"><span class="keyword">val</span> max</span> : <code class="type">float -&gt; float -&gt; float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">max&nbsp;x&nbsp;y</code> returns the maximum of <code class="code">x</code> and <code class="code">y</code>.  It returns <code class="code">nan</code>
   when <code class="code">x</code> or <code class="code">y</code> is <code class="code">nan</code>.  Moreover <code class="code">max&nbsp;(-0.)&nbsp;(+0.)&nbsp;=&nbsp;+0.</code></p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALmin_max"><span class="keyword">val</span> min_max</span> : <code class="type">float -&gt; float -&gt; float * float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">min_max&nbsp;x&nbsp;y</code> is <code class="code">(min&nbsp;x&nbsp;y,&nbsp;max&nbsp;x&nbsp;y)</code>, just more efficient.</p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALmin_num"><span class="keyword">val</span> min_num</span> : <code class="type"><a href="Float.html#TYPEt">t</a> -&gt; <a href="Float.html#TYPEt">t</a> -&gt; <a href="Float.html#TYPEt">t</a></code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">min_num&nbsp;x&nbsp;y</code> returns the minimum of <code class="code">x</code> and <code class="code">y</code> treating <code class="code">nan</code> as
   missing values.  If both <code class="code">x</code> and <code class="code">y</code> are <code class="code">nan</code>, <code class="code">nan</code> is returned.
   Moreover <code class="code">min_num&nbsp;(-0.)&nbsp;(+0.)&nbsp;=&nbsp;-0.</code></p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALmax_num"><span class="keyword">val</span> max_num</span> : <code class="type"><a href="Float.html#TYPEt">t</a> -&gt; <a href="Float.html#TYPEt">t</a> -&gt; <a href="Float.html#TYPEt">t</a></code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">max_num&nbsp;x&nbsp;y</code> returns the maximum of <code class="code">x</code> and <code class="code">y</code> treating <code class="code">nan</code> as
   missing values.  If both <code class="code">x</code> and <code class="code">y</code> are <code class="code">nan</code> <code class="code">nan</code> is returned.
   Moreover <code class="code">max_num&nbsp;(-0.)&nbsp;(+0.)&nbsp;=&nbsp;+0.</code></p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALmin_max_num"><span class="keyword">val</span> min_max_num</span> : <code class="type">float -&gt; float -&gt; float * float</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">min_max_num&nbsp;x&nbsp;y</code> is <code class="code">(min_num&nbsp;x&nbsp;y,&nbsp;max_num&nbsp;x&nbsp;y)</code>, just more
   efficient.  Note that in particular <code class="code">min_max_num&nbsp;x&nbsp;nan&nbsp;=&nbsp;(x,&nbsp;x)</code>
   and <code class="code">min_max_num&nbsp;nan&nbsp;y&nbsp;=&nbsp;(y,&nbsp;y)</code>.</p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.08.0</li>
</ul>
</div>

<pre><span id="VALhash"><span class="keyword">val</span> hash</span> : <code class="type"><a href="Float.html#TYPEt">t</a> -&gt; int</code></pre><div class="info ">
<div class="info-desc">
<p>The hash function for floating-point numbers.</p>
</div>
</div>

<pre><span id="MODULEArray"><span class="keyword">module</span> <a href="Float.Array.html">Array</a></span>: <code class="code"><span class="keyword">sig</span></code> <a href="Float.Array.html">..</a> <code class="code"><span class="keyword">end</span></code></pre>
<pre><span id="MODULEArrayLabels"><span class="keyword">module</span> <a href="Float.ArrayLabels.html">ArrayLabels</a></span>: <code class="code"><span class="keyword">sig</span></code> <a href="Float.ArrayLabels.html">..</a> <code class="code"><span class="keyword">end</span></code></pre>
<div class="copyright">The present documentation is copyright Institut National de Recherche en Informatique et en Automatique (INRIA). A complete version can be obtained from <a href="http://caml.inria.fr/pub/docs/manual-ocaml/">this page</a>.</div></div>